--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <Button
             android:id="@+id/button_reset"
             android:layout_width="wrap_content"
@@ -19,6 +20,7 @@
             android:layout_alignParentEnd="true"/>
         <!--        android:layout_centerVertical="true"-->
         <!--        android:layout_marginEnd="17dp"-->
+
 
 
         <LinearLayout
@@ -169,5 +171,15 @@
 
         </LinearLayout>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/txt_turn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="X, it's your turn"
+        android:textSize="20sp"
+        android:layout_margin="10dp"
+        android:textColor="#000000" />
 
 </LinearLayout>
