--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Reset"
+            android:background="@drawable/settings_button"
             android:layout_alignParentEnd="true"/>
         <!--        android:layout_centerVertical="true"-->
         <!--        android:layout_marginEnd="17dp"-->
