--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tic Tac Toe"
+        android:textSize="40dp"
+        android:textColor="#000000"
+
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/ll_menu"
+        android:layout_marginBottom="40dp"/>
 
     <LinearLayout
+        android:id="@+id/ll_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -18,18 +31,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Play"
+            android:background="@drawable/settings_button"
+            android:layout_marginBottom="5dp"
             />
 
         <Button
             android:id="@+id/btn_help"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/settings_button"
+            android:layout_marginBottom="5dp"
+
             android:text="help"/>
 
         <Button
             android:id="@+id/btn_settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/settings_button"
+            android:layout_marginBottom="5dp"
+
             android:text="Settings"/>
 
         <Button
@@ -37,12 +58,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/btn_help"
+            android:background="@drawable/settings_button"
+            android:layout_marginBottom="5dp"
+
             android:text="about"/>
 
         <Button
             android:id="@+id/btn_exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/settings_button"
+
             android:text="exit"/>
 
     </LinearLayout>
