--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
 
         <Button
             android:id="@+id/btn_play"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Play"
             android:background="@drawable/settings_button"
@@ -36,8 +36,17 @@
             />
 
         <Button
+            android:id="@+id/btn_play_online"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Play Online"
+            android:background="@drawable/settings_button"
+            android:layout_marginBottom="5dp"
+            />
+
+        <Button
             android:id="@+id/btn_help"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/settings_button"
             android:layout_marginBottom="5dp"
@@ -46,7 +55,7 @@
 
         <Button
             android:id="@+id/btn_settings"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/settings_button"
             android:layout_marginBottom="5dp"
@@ -55,7 +64,7 @@
 
         <Button
             android:id="@+id/btn_about"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/btn_help"
             android:background="@drawable/settings_button"
@@ -65,7 +74,7 @@
 
         <Button
             android:id="@+id/btn_exit"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/settings_button"
 
